[5] added a parquet helper class

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,9 @@ dask-worker-space/*
 */.ipynb_checkpoints/*
 */dask-worker-space/*
 */data/*
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/virtual-reef.iml
+*.parquet
